known issue Fig_08_08-11 wrong position
buttons on spreadsheets are working again

--- a/resources/css/Fig_08.css
+++ b/resources/css/Fig_08.css
@@ -6,9 +6,6 @@ td{
     border: 2px black solid;
 }
 
-
-
-
 div.table{
     position: relative;
 }
@@ -43,10 +40,3 @@ img.infinite{
     border-color: rgba(0, 0, 0, 0);
 }
 
-footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 100px;
-    width: 100%;
-}
