--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,1 @@
 /* Application styles could go here */
-ul.pager{
-    display: block;
-}
-
-.previous, .next, .blocks{
-  background-color: transparent;
-}
-
-
